--- a/.github/workflows/track-commits.yml
+++ b/.github/workflows/track-commits.yml
@@ -33,15 +33,19 @@ jobs:
           echo "Date=$DATE"
           echo "Files=$FILES"
 
-          if [ ! -f "$DB" ]; then
-            echo "Creating database and table..."
-            sqlite3 "$DB" "CREATE TABLE IF NOT EXISTS commits (
-              sha TEXT PRIMARY KEY,
-              author TEXT,
-              email TEXT,
-              timestamp TEXT,
-              files TEXT
-            );"
+          # Always ensure the table exists, even if the DB already does
+          sqlite3 "$DB" "CREATE TABLE IF NOT EXISTS commits (
+            sha TEXT PRIMARY KEY,
+            author TEXT,
+            email TEXT,
+            timestamp TEXT,
+            files TEXT
+          );"
+
+          # Skip empty commits (e.g., merge commits with no changed files)
+          if [ -z "$FILES" ]; then
+            echo "No files changed — skipping insert."
+            exit 0
           fi
 
           echo "Inserting commit row..."
