updated workflow to use an authenticated token

--- a/.github/workflows/track-commits.yml
+++ b/.github/workflows/track-commits.yml
@@ -65,4 +65,4 @@ jobs:
           git config user.email "tracker@yourorg.com"
           git add commits_log.sqlite
           git diff --cached --quiet || git commit -m "Auto-update commit tracker: $SHA"
-          git push
+          git push "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git"
